<?xml version="1.0" encoding="utf-8"?>
<!-- main page layout -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- title -->
        <TextView
            android:id="@+id/txtViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_title"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimLeading"
            android:text="@string/leading" />

        <!-- image of the resonant circuit -->
        <ImageView
            android:id="@+id/imageView"
            android:contentDescription="@string/imgDescription"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="61dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/rlcserie" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimLeading"
            android:text="@string/leading" />

        <!-- resistance value -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimTitle"
                android:text="@string/valueR" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/editTextResist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimValue"
                    android:layout_weight=".70"
                    android:inputType="numberDecimal"
                    android:text="@string/testResist"/>
                <Spinner
                    android:id="@+id/spinnerResist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbarSize="@dimen/dimValue"
                    android:layout_weight=".30" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimLeading"
            android:text="@string/leading" />

        <!-- inductance value -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimTitle"
                android:text="@string/valueL" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/editTextInduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimValue"
                    android:layout_weight=".70"
                    android:inputType="numberDecimal"
                    android:text="@string/testInduct" />
                <Spinner
                    android:id="@+id/spinnerInduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbarSize="@dimen/dimValue"
                    android:layout_weight=".30" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimLeading"
            android:text="@string/leading" />

        <!-- capacity value -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimTitle"
                android:text="@string/valueC" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/editTextCapacit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimValue"
                    android:layout_weight=".70"
                    android:inputType="numberDecimal"
                    android:text="@string/testCapacit" />
                <Spinner
                    android:id="@+id/spinnerCapacit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbarSize="@dimen/dimValue"
                    android:layout_weight=".30" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimLeading"
            android:text="@string/leading" />

        <!-- voltage value -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimTitle"
                android:text="@string/valueE" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/editTextVolt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".70"
                    android:inputType="numberDecimal"
                    android:text="@string/testVoltage"
                    android:textSize="@dimen/dimValue" />
                <Spinner
                    android:id="@+id/spinnerVolt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbarSize="@dimen/dimValue"
                    android:layout_weight=".30" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimLeading"
            android:text="@string/leading" />

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/btnCalculate"
            android:textColor="@color/white"
            android:textSize="@dimen/dimCalculate" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimLeading"
            android:text="@string/leading" />

        <!-- coefficient Q value -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimTitle"
                android:layout_weight=".70"
                android:text="@string/valueQ" />
            <TextView
                android:id="@+id/textViewCoeffQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimValue"
                android:layout_weight=".30"
                android:text="@string/leading" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimLeading"
            android:text="@string/leading" />

        <!-- overvoltage value -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimTitle"
                android:layout_weight=".70"
                android:text="@string/overVoltage" />
            <TextView
                android:id="@+id/textViewOverVolt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimValue"
                android:layout_weight=".30"
                android:text="@string/leading" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimLeading"
            android:text="@string/leading" />

        <!--frequency value -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimTitle"
                android:layout_weight=".70"
                android:text="@string/valueF" />
            <TextView
                android:id="@+id/textViewFrequen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimValue"
                android:layout_weight=".30"
                android:text="@string/leading" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>